src/main/java/com/example/shop/web/error/ConflictException.java

package com.example.shop.web.error;

public class ConflictException extends RuntimeException {
  public ConflictException(String msg) { super(msg); }
}
